# DesktopMatePlus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  Dockerfile  EVALUATION.md  Makefile  Plans.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  rule.md
.claude/: CLAUDE.md
.claude/agents/: quality-agent.md
.claude/commands/: babysit.md  post-merge-sweeper.md  pr-pruner.md  quality-report.md
.claude/rules/: DOCUMENT_GUIDE.md  LOGGING_GUIDE.md  TESTING_GUIDE.md  coding-standards.md  project-rules.md  testing.md
.claude/sessions/: .last_inbox_check
.claude/skills/: team-context.md
.claude/state/: harness-usage.json  instructions-loaded.jsonl  plans-state.json  session-skills-used.json  session.events.jsonl  session.json  test-recommendation.json  tooling-policy.json
.github/: drafter-config.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  proposal.md  tech_debt.md
.github/workflows/: ci.yml  release-drafter.yml
.taskmaster/docs/: task_1_summary.md  task_2_summary.md  task_3_4_summary.md  task_5_summary.md  task_6_base64_encoding.md  task_7_vlm_api_integration.md  task_8_summary.md  task_9_service_unification.md
.taskmaster/tasks/: tasks.json
.taskmaster/templates/: websocket_prd.txt
docs/: AGENT_SIMPLIFICATION_POC.md  API_GUIDE.md  CLAUDE.md  COMMUNICATION_GUIDE.md  DOCUMENT_GUIDE.md  EMOJI_ANNOTATIONS.md  GOLDEN_PRINCIPLES.md  QUALITY_SCORE.md  QUICKSTART.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SERVICE_INITIALIZATION_QUICKSTART.md  TASK_10_COMPLETION.md  TASK_2_COMPLETION_SUMMARY.md  agent_implementation_guide.md  deployment_guide.md  scripts-reference.md  service_initialization.md  service_initialization_guide.md  tool_event_logging.md  tts_quick_reference.md  tts_refactoring_summary.md  websocket_message_examples.md
docs/api/: CLAUDE.md  LTM_AddMemory.md  LTM_DeleteMemory.md  LTM_SearchMemory.md  Nanoclaw_Callback.md  REST_API_GUIDE.md  STM_AddChatHistory.md  STM_DeleteSession.md  STM_GetChatHistory.md  STM_ListSessions.md  STM_UpdateSessionMetadata.md  Slack_Events.md  TTS_Synthesize.md  VLM_Analyze.md
docs/feature/: NANOCLAW_INTEGRATION_ANALYSIS.md
docs/guidelines/: COMMUNICATION_GUIDE.md  DOCUMENT_GUIDE.md  LOGGING_GUIDE.md  TESTING_GUIDE.md  changelog_guideline.md
docs/known_issues/: KNOWN_ISSUES.md
docs/patch/: 20251127.md  20260303_websocket_improvements.md  20260307_backend_improvements.md  20260310_sweep_vlm_deprecation.md  20260311_vlm_removal_image_format.md  20260315_tts_flow_refactor.md  20260316_image_size_tts_rolling_timeout.md  20260326_stm_checkpointer_migration.md  ReleaseNoteTemplate.md
docs/prompt/: 1_start_prd.md  2_seven_step_workflow.md  3_self_correction.md  example_input.md
docs/release_notes/: v2.4.x-backlog.md  v2.5.0.md
docs/setup/: DEPENDENCIES.md  ENVIRONMENT.md
docs/todo/: human-in-the-loop.md  proactive-talking.md
docs/websocket/: CLAUDE.md  WEBSOCKET_API_GUIDE.md  WebSocket_Authorize.md  WebSocket_AuthorizeError.md  WebSocket_AuthorizeSuccess.md  WebSocket_AvatarConfigFiles.md  WebSocket_AvatarConfigSwitched.md  WebSocket_BackgroundFiles.md  WebSocket_ChatMessage.md  WebSocket_ConnectionLifecycle.md  WebSocket_ErrorHandling.md  WebSocket_ErrorMessage.md  WebSocket_FetchAvatarConfigs.md  WebSocket_FetchBackgrounds.md  WebSocket_InterruptStream.md  WebSocket_Ping.md  WebSocket_Pong.md  WebSocket_SetModelAndConf.md  WebSocket_StreamEnd.md  WebSocket_StreamStart.md  WebSocket_StreamToken.md  WebSocket_SwitchAvatarConfig.md  WebSocket_TTSReadyChunk.md  WebSocket_ToolCall.md  WebSocket_ToolResult.md  WebSocket_TtsChunk.md
examples/: USAGE_REFERENCE_VOICE.md  agent_graph_demo.py  base64_encoding_demo.py  base64_encoding_test.py  multiturn_session_test.py  realtime_tts_streaming_demo.py  screen_capture_demo.py  screen_vlm_integration.py  stm_api_demo.py  test_ltm.py  test_service_init.py  test_stm.py  test_streaming_graph.py  test_tts_api.py  test_websocket.py  tool_event_logging_demo.py  tts_synthesis_demo.py  vlm_api_manual_test.py  vlm_demo.py  websocket_client_demo.py
resources/backgrounds/: README.md
resources/characters/: README.md  jp_overconfidence_ai.yaml
scripts/: check-task.sh  e2e.sh  lint.sh  log_query.py  logs.sh  metrics.sh  mock_callback.sh  no-master-commit.sh  run.sh  service_manager.sh  verify.sh
scripts/clean/: babysit-collect.sh  check_docs.sh  cleanup-merged.sh  garden.sh  merged-recent.sh  run-quality-agent.sh
scripts/test_dbs/: run_mongodb.sh  run_neo4j.sh  run_qdrant.sh
src/: CLAUDE.md  __init__.py  main.py
src/api/: __init__.py
src/configs/: __init__.py  agent.py  llm.py  ltm.py  mem0_configs.py  settings.py  (+4 more)
tests/: CLAUDE.md  conftest.py  test_agent_factory.py  test_agent_graph.py  test_agent_nodes.py  test_agent_service_manager.py  test_dependencies.py  test_environment.py  test_health_endpoint.py  test_ltm_api.py  test_message_processor.py  test_message_processor_stream_pipeline.py  test_mongodb_stm.py  test_screen_capture.py  test_settings.py  test_stm_api.py  test_stm_mongodb_config.py  test_tool_event_logging.py  test_tts_api_integration.py  test_tts_synthesis.py  test_vlm_api_integration.py  test_vlm_service.py  test_vlm_utils.py  test_websocket_gateway.py  test_websocket_service.py  test_websocket_text_processors.py
yaml_files/: docker.yml  e2e.yml  main.yml  personas.yml  proactive_prompts.yml  services.docker.yml  services.e2e.yml  services.yml  tts_rules.yml
(+401 files in other folders)
